--- a/Version 0.2.6
+++ b/Version 0.2.6
@@ -29,7 +29,7 @@ local e1, e2, e3, e4 =
 {[1] = "Honey Wreath"}
 
 
-
+_G.DispensersIn = true 
 --[[
 
  ___  ____  ____  ____  ____  _  _   ___  ___ 
@@ -266,6 +266,7 @@ if _G.MondoIn == false then
     workspace:WaitForChild('MondoPlatform', 1):Destroy()
     else
     wait()
+end
 end
 
 --AutoDispensers
