--- a/Version 0.7
+++ b/Version 0.7
@@ -1,13 +1,29 @@
 --A very sexy lib made by https://v3rmillion.net/member.php?action=profile&uid=1379221
 --Here's the release thread https://v3rmillion.net/showthread.php?tid=1066917
 
+
+
+
+
+-------------------------------------------------------------------------------------------------------------------
+--SaveConfig
+local HttpService = game:GetService("HttpService");
+local SaveFileName = "KeyBind.txt"
+local Configurations = {Bind = Enum.KeyCode.RightAlt}
+    if not pcall(function()
+    readfile(SaveFileName)
+    end) then
+    writefile(SaveFileName, HttpService:JSONEncode(Configurations))
+end
+local Settings = HttpService:JSONDecode(readfile(SaveFileName))
+local function SaveSettings()
+   writefile(SaveFileName, HttpService:JSONEncode(Settings))
+end
+
 -------------------------------------------------------------------------------------------------------------------
 --Global Variables
 getgenv().Raining = false
 getgenv().Killing = false
-
-
-
 --Local Variables
 LocalPlayer = game.Players.LocalPlayer
 Players = game.Players
@@ -15,6 +31,7 @@ Character = LocalPlayer.Character
 local GC = getconnections or get_signal_cons
 local AlertMondo = game.workspace
 local ContextActionService = game:GetService("ContextActionService")
+local UIS = game:GetService("UserInputService")
 local FreezeAc = "freezeMovement"
 local EnabledDispensers = true 
 local FieldEnabled = true
@@ -23,7 +40,8 @@ local RareEnabled = true
 local GlueEnabled = true
 local Collectibles = game.Workspace.Collectibles
 Collectibles:ClearAllChildren()
-
+Decorations = game.workspace.Decorations.Misc:GetChildren()
+FieldDecorations = game.workspace.FieldDecos:GetChildren()
 
 if GC then
 		for i,v in pairs(GC(Players.LocalPlayer.Idled)) do
@@ -82,7 +100,7 @@ local f1, f2, f3=
 {[1] = "Red Field Booster"},
 {[1] = "Blue Field Booster"},
 {[1] = "Field Booster"}
-
+local d = {"Bamboo", "strawberry", "Pumpkin", "Cactus", "Sundower", "Pineapple", "Pine Tree", "Big Pine Tree", "Mushroom"}
                                 local t = {
                     "rbxassetid://2306224708", --Mooncharm
                     "rbxassetid://2545746569", --Oil
@@ -97,6 +115,12 @@ local f1, f2, f3=
                     "rbxassetid://1839454544"  -- Gumdrop Barrage
 }
 
+
+    
+    
+    
+    
+
 --UI Library
 loadstring(game:HttpGet("https://raw.githubusercontent.com/DivineEntity01/BSS-01/main/Rodus%20%7C%20UI-Library", true))()
 if game:GetService('CoreGui'):WaitForChild('Simple Swarm', 0.08) then
@@ -108,7 +132,6 @@ CreateTab("Monster Farm")
 CreateTab('Player Toggles')
 CreateTab("Extras")
 end
-
 
 -------------------------------------------------------------------------------------------------------------------
 -- D I S P E N S E R S
@@ -306,10 +329,12 @@ end
 end)
 CreateToggle(tabs['Monster Farm'], "Stump Snail", "Turn on to kill the Snail",function()
     if not getgenv().SnailIn then
-    if game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.3) then
-        if game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.3).Target.Value ~= Character then
-        game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.3).Name = 'Stump Snail (Lvl 7)'
+    if game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.03) then
+        if game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.03).Target.Value ~= Character then
+        game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.03).Name = 'Stump Snail (Lvl 7)'
     end
+    
+    elseif not game:GetService("Workspace").Monsters:WaitForChild("Stump Snail (Lvl 6)", 0.03) then
     end
     getgenv().SnailIn = true
     ContextActionService:BindAction(
@@ -412,7 +437,7 @@ CreateToggle(tabs['Monster Farm'], "Mondo Chick", "Turn on to kill the Mondo Chi
         if game.Workspace:FindFirstChild('MondoPlatform', 0.05) then
                 ContextActionService:UnbindAction(FreezeAc)
                 game.Workspace:FindFirstChild('MondoPlatform', 0.05):Destroy()
-                break
+                
         end
         getgenv().Killing = false
         local CoreGui = game:GetService("StarterGui")
@@ -463,7 +488,7 @@ end)
 -------------------------------------------------------------------------------------------------------------------
 --Player Tab
 
-CreateToggle(tabs['Player Toggles'], "Star Catcher", "Catches the falling lights(Needs to complete the science bear beesmas quest)",function()
+CreateToggle(tabs['Player Toggles'], "Star Catcher", "Catches the falling lights",function()
 if not getgenv().StarCatchIn then
         getgenv().StarCatchIn = true
 while true do
@@ -540,7 +565,49 @@ end
 end
 end)
 
-CreateTextBox(tabs['Player Toggles'], "Set Walkspeed", "Click on Walkspeed to set",function(arg)
+CreateButton(tabs['Player Toggles'], "Delete Decorations", "Delete those annoying decorations, smh",function()
+    local CoreGui = game:GetService("StarterGui")
+    if not getgenv().FieldDecosIn then
+    getgenv().FieldDecosIn = true
+if getgenv().FieldDecosIn then
+    CoreGui:SetCore("SendNotification", {
+	Title = "Deleting Decorations...",
+	Text = "Might reduce fps for a just for a few seconds",
+	Duration = 4
+})
+for i,v in pairs(Decorations) do
+        if table.find(d, v.Name) then
+        if v.DataCost == 82 then
+            v:Destroy()
+end
+        if v:FindFirstChild('Part') and not v.Part:FindFirstChild('Decal', 0.03) then
+            v:FindFirstChild('Part'):Destroy()
+end
+end
+        if string.match(v.Name, 'Flower') then
+            v:Destroy()
+end
+end
+wait(1.7)
+for i,v in pairs(FieldDecorations) do
+    wait()
+    if table.find(d, v.Name) then
+                v:Destroy()
+end
+end
+wait(6)
+    CoreGui:SetCore("SendNotification", {
+	Title = "Field Decorations",
+	Text = "Success!",
+	Duration = 6
+})
+end
+end
+end)
+CreateButton(tabs['Player Toggles'], "Teleport to your hive", "Teleport to your hive for your needs",function()
+    game:GetService("Players").LocalPlayer.Character:MoveTo(game:GetService("Players").LocalPlayer.SpawnPos.Value.p)
+end)
+CreateTextBox(tabs['Player Toggles'], "Set Walkspeed", "Set your Walkspeed",function(arg)
     getgenv().WalkspeedIn = false
     wait(0.5)
     getgenv().WalkspeedIn = true
@@ -562,15 +629,19 @@ CreateLabel(tabs['Extras'], "I recommend having a bee", Color3.fromRGB(255,255,2
 CreateLabel(tabs['Extras'], "with the token link ability!", Color3.fromRGB(255,255,255))
 CreateLabel(tabs['Extras'], "", Color3.fromRGB(0,255,0))
 CreateLabel(tabs['Extras'], "Simple Swarm Version:", Color3.fromRGB(0,255,0))
-CreateLabel(tabs['Extras'], "0.5.8(Stable)", Color3.fromRGB(255,255,255))
+CreateLabel(tabs['Extras'], "0.6.1(Stable)", Color3.fromRGB(255,255,255))
 CreateLabel(tabs['Extras'], "Stable Version, a few bugs", Color3.fromRGB(255,255,255))
 CreateLabel(tabs['Extras'], "might be present, just a few", Color3.fromRGB(255,255,255))
-
+CreateTextBox(tabs['Extras'], "GUI Keybind", "Set Keybind",function(arg)
+end)
 -------------------------------------------------------------------------------------------------------------------
 
 
 -- E X T R A  F U N C T I O N S
+game:GetService("CoreGui")["Simple Swarm"].Top.Container["Player Toggles"].TabContainer:WaitForChild("Set Walkspeed", 0.3)
 local textbox = game:GetService("CoreGui")["Simple Swarm"].Top.Container["Player Toggles"].TabContainer["Set Walkspeed"].Side.Box
+local textboxk = game:GetService("CoreGui")["Simple Swarm"].Top.Container["Extras"].TabContainer["GUI Keybind"].Side.Box
+textboxk.Text = "RightAlt"
 textbox.Changed:connect(function(prop)
     if prop == "Text" then
         if not tonumber(textbox.Text) then
@@ -578,3 +649,25 @@ textbox.Changed:connect(function(prop)
         end
     end
 end)
+
+textboxk.Focused:Connect(function()
+    game:GetService("CoreGui")["Simple Swarm"].Top.Container["Extras"].TabContainer["GUI Keybind"].Text = "Press a key"
+	textboxk.TextEditable = false
+	local Enabled = true
+	wait(0.2)
+    UIS.InputBegan:Connect(function(Input , GPE)
+    if Enabled == false then
+        return
+    end
+    Settings.Bind = Input.KeyCode
+    SaveSettings()
+    textboxk.Text = string.sub(tostring(Input.KeyCode), 14)
+    wait()
+    Enabled = false
+    textboxk:ReleaseFocus()
+    end)
+end)
+textboxk.FocusLost:Connect(function()
+    game:GetService("CoreGui")["Simple Swarm"].Top.Container["Extras"].TabContainer["GUI Keybind"].Text = "GUI Keybind"
+end)
+
